--- a/WebCam_V2.html
+++ b/WebCam_V2.html
@@ -38,6 +38,10 @@
         #likesContainer {
             margin-top: 20px;
         }
+        #cameraLabel {
+            display: flex;
+            flex-direction: column;
+        }
     </style>
 </head>
 <body>
@@ -63,10 +67,10 @@
         <label>
             <input type="checkbox" id="muteRemoteCheckbox"> Mute Le Micro du Deuxième Utilisateur
         </label>
-        <label id="cameraLabel">
+        <div id="cameraLabel">
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
-        </label>
+        </div>
         <div id="likesContainer">
             <button id="likeButton">❤️</button>
             <div id="likesCount">Likes reçus: 0</div>
@@ -78,8 +82,6 @@
         let localStream;
         let peer;
         let call;
-        let likedUsers = JSON.parse(localStorage.getItem('likedUsers')) || {};
-
         const callButton = document.getElementById('callButton');
         const hangupButton = document.getElementById('hangupButton');
         const generateMyIdButton = document.getElementById('generateMyId');
@@ -90,23 +92,15 @@
         const muteCheckbox = document.getElementById('muteCheckbox');
         const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
         const cameraSelect = document.getElementById('cameraSelect');
-        const cameraLabel = document.getElementById('cameraLabel');
-        const likeButton = document.getElementById('likeButton');
         const likesCount = document.getElementById('likesCount');
+        const likeButton = document.getElementById('likeButton');
 
-        generateMyIdButton.addEventListener('click', () => {
-            const myId = generateRandomId();
-            myIdInput.value = myId;
-            localStorage.setItem('chatUsername', myId);
-            initializePeer(myId);
-        });
-
-        const storedId = localStorage.getItem('chatUsername');
-        if (storedId) {
-            myIdInput.value = storedId;
-            initializePeer(storedId);
+        // Fonction pour générer un ID aléatoire
+        function generateRandomId() {
+            return Math.random().toString(36).substr(2, 8);
         }
 
+        // Fonction pour initialiser le peer
         function initializePeer(id) {
             peer = new Peer(id);
 
@@ -129,33 +123,36 @@
                         console.error('Failed to get local stream', err);
                     });
             });
+
+            // Met à jour la liste des pairs toutes les 5 secondes
+            setInterval(updatePeerList, 5000);
         }
 
+        // Fonction pour mettre à jour la liste des pairs
         function updatePeerList() {
-            // Assurez-vous que cette fonction ajoute les utilisateurs connectés au combobox
-            // Ceci est une simulation, à remplacer avec le vrai code pour la gestion des pairs
-            setInterval(async () => {
-                // Exemple de gestion des pairs, cette logique doit être adaptée à votre code
-                // La liste des pairs peut être maintenue en interne ou obtenue à partir d'une source de vérité
-                // Exemple :
-                let peerList = {}; // Obtenez la liste des pairs d'une source
-                // Mettez à jour le combobox
-                const options = Object.keys(peerList).map(id => {
-                    const option = document.createElement('option');
-                    option.value = id;
-                    option.textContent = id;
-                    return option;
-                });
-                // Ajoutez ou mettez à jour les options dans le combobox
-                cameraSelect.innerHTML = '';
-                options.forEach(option => cameraSelect.appendChild(option));
-            }, 5000); // Vérifiez toutes les 5 secondes
+            // Simule l'obtention de la liste des pairs depuis un serveur ou une autre source
+            const peerList = getPeerListFromServer(); // Remplacez par votre méthode pour obtenir la liste des pairs
+
+            // Met à jour le menu déroulant
+            cameraSelect.innerHTML = '';
+            Object.keys(peerList).forEach(id => {
+                const option = document.createElement('option');
+                option.value = id;
+                option.textContent = id;
+                cameraSelect.appendChild(option);
+            });
         }
 
-        function generateRandomId() {
-            return Math.random().toString(36).substr(2, 8);
+        // Fonction simulée pour obtenir une liste des pairs
+        function getPeerListFromServer() {
+            return {
+                'peer1': 'Peer 1',
+                'peer2': 'Peer 2',
+                'peer3': 'Peer 3'
+            };
         }
 
+        // Fonction pour obtenir le flux local
         async function getLocalStream() {
             const constraints = await detectCameraConstraints();
             return navigator.mediaDevices.getUserMedia(constraints)
@@ -171,6 +168,7 @@
                 });
         }
 
+        // Fonction pour détecter les contraintes de la caméra
         async function detectCameraConstraints() {
             const device = detectDevice();
             let constraints = {
@@ -196,7 +194,6 @@
                     deviceId: { exact: cameraSelect.value }
                 };
             } else {
-                cameraLabel.style.display = 'none';
                 const selectedCamera = localStorage.getItem('selectedCamera');
                 if (selectedCamera) {
                     constraints.video = {
@@ -208,6 +205,7 @@
             return constraints;
         }
 
+        // Fonction pour détecter le type de dispositif
         function detectDevice() {
             const userAgent = navigator.userAgent || navigator.vendor || window.opera;
             if (/windows phone/i.test(userAgent)) {
@@ -222,6 +220,7 @@
             return "unknown";
         }
 
+        // Fonction pour appliquer le mute au micro
         function applyMicMute() {
             if (localStream) {
                 const audioTracks = localStream.getAudioTracks();
@@ -231,6 +230,7 @@
             }
         }
 
+        // Fonction pour envoyer un signal de mute
         function sendMuteSignal(mute) {
             if (call) {
                 call.peerConnection.getSenders().forEach(sender => {
@@ -241,27 +241,38 @@
             }
         }
 
+        // Gestion des événements
+        generateMyIdButton.addEventListener('click', () => {
+            const myId = generateRandomId();
+            myIdInput.value = myId;
+            localStorage.setItem('chatUsername', myId);
+            initializePeer(myId);
+        });
+
+        const storedId = localStorage.getItem('chatUsername');
+        if (storedId) {
+            myIdInput.value = storedId;
+            initializePeer(storedId);
+        }
+
         callButton.addEventListener('click', () => {
             const peerId = peerIdInput.value.trim();
             if (!peerId) {
-                alert('Veuillez entrer l\'ID de la personne à appeler.');
+                alert('Veuillez entrer l\'ID de la personne à appeler');
                 return;
             }
-
             getLocalStream()
-                .then((stream) => {
+                .then(stream => {
                     localStream = stream;
-                    localVideo.srcObject = stream;
-                    applyMicMute(); // Applique le mute initial
-                    call = peer.call(peerId, stream);
+                    const callOptions = {
+                        video: { deviceId: { exact: cameraSelect.value } }
+                    };
+                    call = peer.call(peerId, stream, callOptions);
                     call.on('stream', (remoteStream) => {
                         remoteVideo.srcObject = remoteStream;
                     });
-                    call.on('close', () => {
-                        remoteVideo.srcObject = null;
-                    });
                 })
-                .catch((err) => {
+                .catch(err => {
                     console.error('Failed to get local stream', err);
                 });
         });
@@ -269,8 +280,9 @@
         hangupButton.addEventListener('click', () => {
             if (call) {
                 call.close();
+                localVideo.srcObject = null;
                 remoteVideo.srcObject = null;
-                localStream.getTracks().forEach(track => track.stop());
+                call = null;
             }
         });
 
@@ -279,28 +291,30 @@
         });
 
         muteRemoteCheckbox.addEventListener('change', () => {
-            sendMuteSignal(muteRemoteCheckbox.checked);
+            if (call) {
+                sendMuteSignal(muteRemoteCheckbox.checked);
+            }
         });
 
         cameraSelect.addEventListener('change', () => {
             localStorage.setItem('selectedCamera', cameraSelect.value);
-            getLocalStream();
+            getLocalStream(); // Redémarre le flux avec la caméra sélectionnée
         });
 
         likeButton.addEventListener('click', () => {
             const myId = myIdInput.value;
             likedUsers[myId] = (likedUsers[myId] || 0) + 1;
             localStorage.setItem('likedUsers', JSON.stringify(likedUsers));
-            updateLikesDisplay();
+            updateLikesCount();
         });
 
-        function updateLikesDisplay() {
+        function updateLikesCount() {
             const myId = myIdInput.value;
-            likesCount.textContent = `Likes reçus: ${likedUsers[myId] || 0}`;
+            const count = likedUsers[myId] || 0;
+            likesCount.textContent = `Likes reçus: ${count}`;
         }
 
-        updateLikesDisplay(); // Initial display update
-
+        updateLikesCount(); // Met à jour le compteur des likes au chargement
     </script>
 </body>
 </html>
