--- a/WebCam_V2.html
+++ b/WebCam_V2.html
@@ -35,13 +35,6 @@
         #controls label, #controls button {
             margin-bottom: 10px;
         }
-        #likesContainer {
-            margin-top: 20px;
-        }
-        #cameraLabel {
-            display: flex;
-            flex-direction: column;
-        }
     </style>
 </head>
 <body>
@@ -67,14 +60,10 @@
         <label>
             <input type="checkbox" id="muteRemoteCheckbox"> Mute Le Micro du Deuxième Utilisateur
         </label>
-        <div id="cameraLabel">
+        <label id="cameraLabel">
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
-        </div>
-        <div id="likesContainer">
-            <button id="likeButton">❤️</button>
-            <div id="likesCount">Likes reçus: 0</div>
-        </div>
+        </label>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -82,6 +71,8 @@
         let localStream;
         let peer;
         let call;
+        let validPeers = {};  // Utilisé pour stocker les IDs de pairs valides
+
         const callButton = document.getElementById('callButton');
         const hangupButton = document.getElementById('hangupButton');
         const generateMyIdButton = document.getElementById('generateMyId');
@@ -92,21 +83,26 @@
         const muteCheckbox = document.getElementById('muteCheckbox');
         const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
         const cameraSelect = document.getElementById('cameraSelect');
-        const likesCount = document.getElementById('likesCount');
-        const likeButton = document.getElementById('likeButton');
+        const cameraLabel = document.getElementById('cameraLabel');
 
-        // Fonction pour générer un ID aléatoire
-        function generateRandomId() {
-            return Math.random().toString(36).substr(2, 8);
+        generateMyIdButton.addEventListener('click', () => {
+            const myId = generateRandomId();
+            myIdInput.value = myId;
+            localStorage.setItem('chatUsername', myId);
+            initializePeer(myId);
+        });
+
+        const storedId = localStorage.getItem('chatUsername');
+        if (storedId) {
+            myIdInput.value = storedId;
+            initializePeer(storedId);
         }
 
-        // Fonction pour initialiser le peer
         function initializePeer(id) {
             peer = new Peer(id);
 
             peer.on('open', () => {
                 console.log('My peer ID is: ' + id);
-                updatePeerList();
             });
 
             peer.on('call', (incomingCall) => {
@@ -124,35 +120,24 @@
                     });
             });
 
-            // Met à jour la liste des pairs toutes les 5 secondes
-            setInterval(updatePeerList, 5000);
-        }
+            peer.on('connection', (conn) => {
+                conn.on('open', () => {
+                    console.log('Connection established with:', conn.peer);
+                    validPeers[conn.peer] = true;
+                    updatePeerList();
+                });
 
-        // Fonction pour mettre à jour la liste des pairs
-        function updatePeerList() {
-            // Simule l'obtention de la liste des pairs depuis un serveur ou une autre source
-            const peerList = getPeerListFromServer(); // Remplacez par votre méthode pour obtenir la liste des pairs
-
-            // Met à jour le menu déroulant
-            cameraSelect.innerHTML = '';
-            Object.keys(peerList).forEach(id => {
-                const option = document.createElement('option');
-                option.value = id;
-                option.textContent = id;
-                cameraSelect.appendChild(option);
+                conn.on('close', () => {
+                    delete validPeers[conn.peer];
+                    updatePeerList();
+                });
             });
         }
 
-        // Fonction simulée pour obtenir une liste des pairs
-        function getPeerListFromServer() {
-            return {
-                'peer1': 'Peer 1',
-                'peer2': 'Peer 2',
-                'peer3': 'Peer 3'
-            };
+        function generateRandomId() {
+            return Math.random().toString(36).substr(2, 8);
         }
 
-        // Fonction pour obtenir le flux local
         async function getLocalStream() {
             const constraints = await detectCameraConstraints();
             return navigator.mediaDevices.getUserMedia(constraints)
@@ -168,17 +153,15 @@
                 });
         }
 
-        // Fonction pour détecter les contraintes de la caméra
         async function detectCameraConstraints() {
             const device = detectDevice();
             let constraints = {
                 audio: true,
-                video: {
-                    facingMode: 'environment' // Par défaut, caméra arrière
-                }
+                video: true
             };
 
             if (device === 'iOS') {
+                // Pour iOS, lister les caméras disponibles
                 const devices = await navigator.mediaDevices.enumerateDevices();
                 const videoDevices = devices.filter(device => device.kind === 'videoinput');
                 cameraSelect.innerHTML = '';
@@ -188,24 +171,23 @@
                     option.text = device.label || `Caméra ${index + 1}`;
                     cameraSelect.appendChild(option);
                 });
-                const selectedCamera = localStorage.getItem('selectedCamera');
-                cameraSelect.value = selectedCamera || videoDevices[0].deviceId;
+                const savedCameraId = localStorage.getItem('selectedCamera');
+                cameraSelect.value = savedCameraId || videoDevices[0].deviceId;
                 constraints.video = {
                     deviceId: { exact: cameraSelect.value }
                 };
+                cameraLabel.style.display = 'block';
             } else {
-                const selectedCamera = localStorage.getItem('selectedCamera');
-                if (selectedCamera) {
-                    constraints.video = {
-                        deviceId: { exact: selectedCamera }
-                    };
-                }
+                // Pour les autres appareils, utilisez la caméra arrière par défaut
+                constraints.video = {
+                    facingMode: 'environment'
+                };
+                cameraLabel.style.display = 'none';
             }
 
             return constraints;
         }
 
-        // Fonction pour détecter le type de dispositif
         function detectDevice() {
             const userAgent = navigator.userAgent || navigator.vendor || window.opera;
             if (/windows phone/i.test(userAgent)) {
@@ -220,7 +202,6 @@
             return "unknown";
         }
 
-        // Fonction pour appliquer le mute au micro
         function applyMicMute() {
             if (localStream) {
                 const audioTracks = localStream.getAudioTracks();
@@ -230,7 +211,6 @@
             }
         }
 
-        // Fonction pour envoyer un signal de mute
         function sendMuteSignal(mute) {
             if (call) {
                 call.peerConnection.getSenders().forEach(sender => {
@@ -241,80 +221,127 @@
             }
         }
 
-        // Gestion des événements
-        generateMyIdButton.addEventListener('click', () => {
-            const myId = generateRandomId();
-            myIdInput.value = myId;
-            localStorage.setItem('chatUsername', myId);
-            initializePeer(myId);
-        });
-
-        const storedId = localStorage.getItem('chatUsername');
-        if (storedId) {
-            myIdInput.value = storedId;
-            initializePeer(storedId);
-        }
-
         callButton.addEventListener('click', () => {
             const peerId = peerIdInput.value.trim();
             if (!peerId) {
-                alert('Veuillez entrer l\'ID de la personne à appeler');
+                alert('Veuillez entrer l\'ID de la personne à appeler.');
                 return;
             }
+
             getLocalStream()
-                .then(stream => {
+                .then((stream) => {
                     localStream = stream;
-                    const callOptions = {
-                        video: { deviceId: { exact: cameraSelect.value } }
-                    };
-                    call = peer.call(peerId, stream, callOptions);
+                    localVideo.srcObject = stream;
+                    applyMicMute(); // Applique le mute initial
+                    call = peer.call(peerId, stream);
                     call.on('stream', (remoteStream) => {
                         remoteVideo.srcObject = remoteStream;
                     });
+                    call.on('close', () => {
+                        remoteVideo.srcObject = null;
+                    });
                 })
-                .catch(err => {
+                .catch((err) => {
                     console.error('Failed to get local stream', err);
                 });
         });
 
         hangupButton.addEventListener('click', () => {
+            if (localStream) {
+                localStream.getTracks().forEach(track => track.stop());
+            }
             if (call) {
                 call.close();
-                localVideo.srcObject = null;
-                remoteVideo.srcObject = null;
-                call = null;
             }
+            localVideo.srcObject = null;
+            remoteVideo.srcObject = null;
         });
 
         muteCheckbox.addEventListener('change', () => {
-            applyMicMute();
+            applyMicMute(); // Mute ou unmute le microphone localement
         });
 
         muteRemoteCheckbox.addEventListener('change', () => {
-            if (call) {
-                sendMuteSignal(muteRemoteCheckbox.checked);
-            }
+            sendMuteSignal(muteRemoteCheckbox.checked); // Envoie le signal de mute au deuxième utilisateur
         });
 
-        cameraSelect.addEventListener('change', () => {
-            localStorage.setItem('selectedCamera', cameraSelect.value);
-            getLocalStream(); // Redémarre le flux avec la caméra sélectionnée
+        cameraSelect.addEventListener('change', async () => {
+            localStorage.setItem('selectedCamera', cameraSelect.value); // Sauvegarder la sélection de la caméra
+            await getLocalStream(); // Reprendre le flux avec la nouvelle caméra sélectionnée
         });
 
-        likeButton.addEventListener('click', () => {
-            const myId = myIdInput.value;
-            likedUsers[myId] = (likedUsers[myId] || 0) + 1;
-            localStorage.setItem('likedUsers', JSON.stringify(likedUsers));
-            updateLikesCount();
-        });
-
-        function updateLikesCount() {
-            const myId = myIdInput.value;
-            const count = likedUsers[myId] || 0;
-            likesCount.textContent = `Likes reçus: ${count}`;
+        function updatePeerList() {
+            const peerList = document.getElementById('peerList');
+            peerList.innerHTML = '';
+            Object.keys(validPeers).forEach(id => {
+                const option = document.createElement('option');
+                option.value = id;
+                option.text = id;
+                peerList.appendChild(option);
+            });
         }
 
-        updateLikesCount(); // Met à jour le compteur des likes au chargement
+        async function checkPeers() {
+            // Vérifie tous les 5 secondes si les pairs sont toujours connectés
+            setInterval(() => {
+                Object.keys(validPeers).forEach(id => {
+                    const conn = peer.connections[id];
+                    if (conn && conn.length === 0) {
+                        delete validPeers[id];
+                        updatePeerList();
+                    }
+                });
+            }, 5000);
+        }
+
+        function initializePeer(id) {
+            peer = new Peer(id);
+
+            peer.on('open', () => {
+                console.log('My peer ID is: ' + id);
+                checkPeers(); // Vérifie les pairs dès l'ouverture de la connexion
+            });
+
+            peer.on('call', (incomingCall) => {
+                getLocalStream()
+                    .then((stream) => {
+                        localStream = stream;
+                        localVideo.srcObject = stream;
+                        incomingCall.answer(stream);
+                        incomingCall.on('stream', (remoteStream) => {
+                            remoteVideo.srcObject = remoteStream;
+                        });
+                    })
+                    .catch((err) => {
+                        console.error('Failed to get local stream', err);
+                    });
+            });
+
+            peer.on('connection', (conn) => {
+                conn.on('open', () => {
+                    console.log('Connection established with:', conn.peer);
+                    validPeers[conn.peer] = true;
+                    updatePeerList();
+                });
+
+                conn.on('close', () => {
+                    delete validPeers[conn.peer];
+                    updatePeerList();
+                });
+            });
+        }
+
+        // Initialisation
+        (async function init() {
+            const storedId = localStorage.getItem('chatUsername');
+            if (storedId) {
+                myIdInput.value = storedId;
+                initializePeer(storedId);
+            } else {
+                generateMyIdButton.click();
+            }
+        })();
+
     </script>
 </body>
 </html>
