--- a/WebCam_V2.html
+++ b/WebCam_V2.html
@@ -63,14 +63,8 @@
         <label id="cameraLabel">
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
-            <button id="switchCameraButton">Changer de Caméra</button>
         </label>
-        <label>
-            Sélectionner un utilisateur :
-            <select id="userSelect"></select>
-        </label>
-      <button id="likeButton">❤️</button>
-        <p id="likesCount">Likes reçus: 0</p>
+        <button id="likeButton">❤️</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -79,7 +73,6 @@
         let peer;
         let call;
         let validUsers = [];
-        let likedUsers = {};
 
         const callButton = document.getElementById('callButton');
         const hangupButton = document.getElementById('hangupButton');
@@ -91,10 +84,7 @@
         const muteCheckbox = document.getElementById('muteCheckbox');
         const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
         const cameraSelect = document.getElementById('cameraSelect');
-        const userSelect = document.getElementById('userSelect');
-        const switchCameraButton = document.getElementById('switchCameraButton');
         const likeButton = document.getElementById('likeButton');
-        const likesCount = document.getElementById('likesCount');
 
         generateMyIdButton.addEventListener('click', () => {
             const myId = generateRandomId();
@@ -134,20 +124,6 @@
                     });
             });
 
-            peer.on('connection', conn => {
-                conn.on('data', data => {
-                    if (data.type === 'like') {
-                        const senderId = conn.peer;
-                        if (!likedUsers[senderId]) {
-                            likedUsers[senderId] = 1;
-                        } else {
-                            likedUsers[senderId]++;
-                        }
-                        updateLikesCount();
-                    }
-                });
-            });
-
             setInterval(checkValidUsers, 5000);
         }
 
@@ -181,6 +157,7 @@
             const videoDevices = devices.filter(device => device.kind === 'videoinput');
             cameraSelect.innerHTML = '';
 
+            // iOS and Android specific handling
             if (device === 'iOS') {
                 if (videoDevices.length > 1) {
                     cameraSelect.innerHTML = `
@@ -191,10 +168,11 @@
                     cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
                 }
             } else if (device === 'Android') {
+                // Use the camera 1 if camera 2 doesn't work
                 if (videoDevices.length > 1) {
                     cameraSelect.innerHTML = `
                         <option value="${videoDevices[0].deviceId}">Caméra 1</option>
-                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
+                        <option value="${videoDevices[1].deviceId}" selected>Caméra 2</option>
                     `;
                 } else {
                     cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
@@ -208,7 +186,7 @@
                 });
             }
 
-            // Restore the previously selected camera
+            // Set the camera selection from localStorage
             const savedCameraId = localStorage.getItem('selectedCameraId');
             if (savedCameraId) {
                 cameraSelect.value = savedCameraId;
@@ -294,16 +272,8 @@
             sendMuteSignal(muteRemoteCheckbox.checked);
         });
 
-        switchCameraButton.addEventListener('click', async () => {
-            if (localStream) {
-                const videoTracks = localStream.getVideoTracks();
-                videoTracks.forEach(track => track.stop());
-            }
-            await getLocalStream();
-        });
-
+        // Handle camera switch button click
         cameraSelect.addEventListener('change', async () => {
-            localStorage.setItem('selectedCameraId', cameraSelect.value);
             if (localStream) {
                 const videoTracks = localStream.getVideoTracks();
                 videoTracks.forEach(track => track.stop());
@@ -311,13 +281,33 @@
             await getLocalStream();
         });
 
+        // Save the selected camera ID in localStorage
+        cameraSelect.addEventListener('change', () => {
+            localStorage.setItem('selectedCameraId', cameraSelect.value);
+        });
+
+        // Like button functionality
         likeButton.addEventListener('click', () => {
-            if (call) {
-                const conn = peer.connect(call.peer);
-                conn.on('open', () => {
-                    conn.send({ type: 'like' });
-                });
+            const peerId = peerIdInput.value.trim();
+            if (!peerId) {
+                alert('Veuillez entrer l\'ID de la personne à appeler pour envoyer un like.');
+                return;
             }
+            if (peer.connections[peerId]) {
+                const conn = peer.connections[peerId][0];
+                if (conn) {
+                    conn.send({ type: 'like' });
+                }
+            }
+        });
+
+        // Handle incoming messages
+        peer.on('connection', (conn) => {
+            conn.on('data', (data) => {
+                if (data.type === 'like') {
+                    alert('Vous avez reçu un like!');
+                }
+            });
         });
 
         function addUserToValidUsers(userId) {
@@ -328,13 +318,7 @@
         }
 
         function updateValidUsersComboBox() {
-            userSelect.innerHTML = '';
-            validUsers.forEach(user => {
-                const option = document.createElement('option');
-                option.value = user;
-                option.text = user;
-                userSelect.appendChild(option);
-            });
+            // This function is now not used, as ComboBox has been removed
         }
 
         function checkValidUsers() {
@@ -347,12 +331,7 @@
             });
 
             validUsers = newValidUsers;
-            updateValidUsersComboBox();
-        }
-
-        function updateLikesCount() {
-            const totalLikes = Object.values(likedUsers).reduce((acc, count) => acc + count, 0);
-            likesCount.textContent = `Likes reçus: ${totalLikes}`;
+            // This function is now not used, as ComboBox has been removed
         }
 
         setInterval(checkValidUsers, 5000);
